--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,9 @@
   padding: 20px 40px;
   font-size: 3.5rem;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
   margin-top: 20px;
+  font-weight: bold;
 }
 
 .top-navbar {
